--- a/serverless.yml
+++ b/serverless.yml
@@ -15,6 +15,7 @@ service: cubbieservice
 # app and org for use with dashboard.serverless.com
 app: cubbieapp
 org: cubbiecoding
+useDotenv: true
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
